# Haiku Libraries - Meson Build Configuration
# This builds support libraries required for libbe.so

message('Building Haiku support libraries...')

# Icon Library - Vector icon rendering and utilities
subdir('icon')

# Blend2D Library - Modern 2D vector graphics rendering
subdir('blend2d')
# subdir('textencoding')     # Text encoding support

message('All Haiku support libraries configured successfully')