# Haiku Libraries - Meson Build Configuration
# This builds support libraries required for libbe.so

message('Building Haiku support libraries...')

# Icon Library - Vector icon rendering and utilities
subdir('icon')

# AGG Library - Anti-Grain Geometry rendering library  
subdir('agg')

# Blend2D Library - Modern 2D vector graphics engine with JIT
subdir('blend2d')

# subdir('textencoding')     # Text encoding support

message('All Haiku support libraries configured successfully')